--- a/webdev/style.css
+++ b/webdev/style.css
@@ -42,14 +42,14 @@ body {
 
 .header__block_header {
   height: 95px;
+  width: 583px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 135px;
 }
 
 .header__block_menu-body {
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,14 +57,20 @@ body {
 
 .header__block_menu-list {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding-left: 0;
-  margin-left: 0;
+  padding: 0;
+  margin: 0;
   height: 100%;
+  width: 100%;
 }
 
 .header__block_menu-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
+  height: 100%;
 }
 
 .header__block_menu__link {
@@ -80,18 +86,6 @@ body {
 .header__block_menu__link.active {
   opacity: 1;
   text-decoration: underline;
-}
-
-.header__block_menu__link-left {
-  margin-left: 85px;
-}
-
-.header__block_menu__link-right {
-  margin-right: 85px;
-}
-
-.header__block_logo {
-  margin: auto 100px;
 }
 
 .first_block_title {
@@ -161,6 +155,9 @@ body {
 }
 
 .rappresent__content_block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 233px;
   width: 407px;
   margin: 295px 248px 314px 269px;
@@ -186,7 +183,7 @@ body {
   font-family: Roboto Regular;
   font-style: normal;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 20px;
   color: #4E4E4E;
 }
 
@@ -262,7 +259,7 @@ body {
   font-family: Roboto Regular;
   font-style: normal;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 20px;
   text-align: center;
   color: #4E4E4E;
   margin: 0;
@@ -272,7 +269,7 @@ body {
 .our-community__content_image-block {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .slider__nav_items {
@@ -372,7 +369,7 @@ slider__items_image-container {
   font-family: Roboto Regular;
   font-style: normal;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 20px;
   color: #373737;
   border: none;
 }
@@ -423,7 +420,7 @@ slider__items_image-container {
   font-family: Roboto Regular;
   font-style: normal;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 20px;
   display: flex;
   align-items: center;
   text-align: center;
@@ -475,6 +472,7 @@ slider__items_image-container {
   height: 20px;
   width: 236px;
   margin-left: 160px;
+  padding-bottom: 16px;
 }
 
 .footer__nav_list {
@@ -502,6 +500,7 @@ slider__items_image-container {
 .footer__logo-container {
   height: 45px;
   width: 45px;
+  padding-bottom: 16px;
 }
 
 .footer-text {
@@ -512,6 +511,6 @@ slider__items_image-container {
   text-align: left;
   color: #818181;
   width: 330px;
-  padding: 0;
-  margin-left: 66px;
+  padding: 0 0 16px 0;
+  margin: 0 0 0 66px;
 }
